--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <p><a href="http://litdiff.com/methods.html"><em>Methods</em></a></p>
 
 <p><a href="https://github.com/bradleyrcamacho98/babelsentiment"><em>babelsentiment Tool</em></a></p>
+
+<p><a href="https://docs.google.com/presentation/d/109NX9ixBqHKKxIFuyAQsppEpSX00p0s_saQDK1IFV6M/edit?usp=sharing"><em>The Presentation</em></a></p>
 </body>
 </html>
